	* Add function for set/get edje file.
	    Still needs to limit to only groups in the current edje file.
	* Add full support for evas line object.
	* Add full support for evas polygon object.
	* Beefed up the example lua script to show most of the above.
	  Including some handling of size changes.
	* White space fixes, one of the editors I use cleans those up automatically.  shrugs

2011-11-06  David Seikel (onefang)

	* Lua: Added half of the evas map API.

2011-11-07  David Seikel (onefang)

	* Lua: Added the other half of the evas map API.

2011-11-19  Carsten Haitzler (The Rasterman)

	* Fix message and signal propagation to be consistent in all situations
        as well as simpler.

2011-12-02 Carsten Haitzler (The Rasterman)

        1.1.0 release

2011-12-12 Mike Blumenkrantz (discomfitor/zmike)

        * Fix potential crash from buffer overflow on copying map data.

2011-12-15  Tom Hacohen (TAsn)

	* Entry: Added support for various new key bindings:
	Ctrl+Arrows, Ctrl+Del and Ctrl+Backspace.
	* Entry: Added cursor,changed,manual signal.
	This signal indicates the cursor has been manually changed, i.e by
	either mouse click or arrows.

2011-12-15  Cedric Bail

	* Fix detections of limits by edje_cc parser.

2011-12-16  Cedric Bail

	* Fix wrong call to free() in edje_load.
	* Reduce parts walk to the strict minimum.

2011-12-19  Cedric Bail

	* Check existence of group at compile time also.

2012-01-02 Carsten Haitzler (The Rasterman)

        * Fix prototype for edje_object_part_text_cursor_content_get()
          as it returned a strduped string and not an internal one, so
          this just formalizes its existing behavior correctly.

2012-01-03  Tom Hacohen (TAsn)

	* Entry: Fixed undo/redo with IMF.

2012-01-04  Carsten Haitzler (The Rasterman)

        * Add HEX, TERMINAL and PASSWORD layouts to edje
        * Add "recalc" smart callback for object size changes

2012-01-05  Cedric Bail

	* Reduce call to stat during edje_object_file_set.